--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
                     <div class="tab-pane" role="tabpanel" id="complete">
                         <div class="step44">                            
                              <div id="accordion-container" >
-                                <div id="chartContainer" style="height: 300px; width: 100%;"></div>   
+                                <div id="chartContainer" style="height: 300px; width: 100%;"></div>  
+                                <div id="dyn-table"></div>     
                             </div>
             </form>
         </div>
