--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                         <ul class="list-inline pull-right margin-top-1">
-
+                                <li><button type="button" id="custom-scenario" class="btn btn-primary next-step">Create a custon scenario</button></li>
                             <li><button type="button" id="execute" class="btn btn-primary next-step" onclick="updateMDF();">Execute Now</button></li>
                             <li><button type="button" id="reset" class="btn btn-primary next-step">Reset</button></li>
                             <li><button type="button" id="schedule-later" class="btn btn-primary next-step">Scheduled for later</button></li>                        
