--- a/customScenario.html
+++ b/customScenario.html
@@ -154,7 +154,7 @@
                                                 </input>
                                             </label>
 
-                                                                                <label class="btn metrostyle eenmetro btn-group tile green btn-primary" style="cursor: pointer">
+                                                                                <label class="btn metrostyle eenmetro btn-group tile red btn-primary" style="cursor: pointer">
                                                 <input type="radio" name="environment" value="CTE-F2" id="option2" autocomplete="off">
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:10px">Private</span>  
                                                 </input>
@@ -184,7 +184,7 @@
                                                 </input>
                                             </label>
 
-                                                                                    <label class="btn metrostyle eenmetro btn-group tile green btn-primary" style="cursor: pointer">
+                                                                                    <label class="btn metrostyle eenmetro btn-group tile red btn-primary" style="cursor: pointer">
                                                 <input type="radio" name="environment" value="CTE-F2" id="option2" autocomplete="off">
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:10px">Both - Default</span>  
                                                 </input>
@@ -215,7 +215,7 @@
                                                 </input>
                                             </label>
 
-                                                                                        <label class="btn metrostyle eenmetro btn-group tile green btn-primary" style="cursor: pointer">
+                                                                                        <label class="btn metrostyle eenmetro btn-group tile red btn-primary" style="cursor: pointer">
                                                 <input type="radio" name="environment" value="CTE-F2" id="option2" autocomplete="off">
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px ;margin-right:10px">Both - Default</span>  
                                                 </input>
