--- a/customScenario.html
+++ b/customScenario.html
@@ -225,6 +225,13 @@
 
                                                                                 </div>
 
+                            </div>
+                             <div style="margin-left:-150px;margin-right:150px;">                                                       
+                            <ul class="list-inline pull-right margin-top-1">
+                            <li><button type="button" id="custom-scenario" class="btn btn-primary next-step"><a href="index.html"> <span style="color:white;float:left;">Cancel</span></a></button></li>
+                            <li><button type="button" id="custom-scenario" class="btn btn-primary next-step"><a href="customScenario.html"> <span style="color:white;float:left;">Submit</span></a></button></li>      
+                            </ul>
+                            </div> 
 
 
 
