--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
                             </div>
                         </div>
                         <ul class="list-inline pull-right margin-top-1">
-                                <li><button type="button" id="custom-scenario" class="btn btn-primary next-step">Create a custon scenario</button></li>
+                            <li><button type="button" id="custom-scenario" class="btn btn-primary next-step"><a href="customScenario.html"> <span style="color:white;float:left;">Create a Custom Scenario</span></a></button></li>
                             <li><button type="button" id="execute" class="btn btn-primary next-step" onclick="updateMDF();">Execute Now</button></li>
                             <li><button type="button" id="reset" class="btn btn-primary next-step">Reset</button></li>
-                            <li><button type="button" id="schedule-later" class="btn btn-primary next-step">Scheduled for later</button></li>                        
+                            <li><button type="button" id="schedule-later" class="btn btn-primary next-step">Schedule for later</button></li>                        
                             </ul>
                     </div>
                     </div>
