--- a/registration.html
+++ b/registration.html
@@ -14,12 +14,12 @@
 <body>
   <div class="wrapper">
 	<div class="container">
-		<h1>Welcome</h1>
+		<h1>Registration</h1>
 		
 		<form class="form">
-			<input type="text" placeholder="Username">
+			<input type="text" placeholder="Email ID">
 			<input type="password" placeholder="Password">
-			<button type="submit" id="login-button">Login</button>
+			<button type="submit" id="login-button">Sign Up</button>
 		</form>
 	</div>
 	
