--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
 			<input type="text" placeholder="Username">
 			<input type="password" placeholder="Password">
 			<button type="submit" id="login-button">Login</button>
+			<button type="submit" id="login-button"><a href="registration.html" style="color: #53e3a6; text-decoration: none;">Sign Up</a></button>
 		</form>
 	</div>
 	
