--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 		<form class="form">
 			<input type="text" placeholder="Username">
 			<input type="password" placeholder="Password">
-			<button type="submit" id="login-button">Login</button>
+			<div style="width:10px;margin-left:176px;margin-bottom:10px;"><button type="submit" id="login-button">Login</button></div>
 			<button type="submit" id="login-button"><a href="registration.html" style="color: #53e3a6; text-decoration: none;">Sign Up</a></button>
 		</form>
 	</div>
