--- a/registration.html
+++ b/registration.html
@@ -17,6 +17,7 @@
 		<h1>Registration</h1>
 		
 		<form class="form">
+			<input type="hidden" name="signup" id="signup" value="signup">
 			<input type="text" placeholder="Email ID">
 			<input type="password" placeholder="Password">
 			<button type="submit" id="login-button">Sign Up</button>
