--- a/registration.html
+++ b/registration.html
@@ -16,10 +16,10 @@
 	<div class="container">
 		<h1>Registration</h1>
 		
-		<form class="form">
+		 <form action="/index.html" method="POST">
 			<input type="hidden" name="signup" id="signup" value="signup">
-			<input type="text" placeholder="Email ID">
-			<input type="password" placeholder="Password">
+			<input type="text" placeholder="Enter Email" name="email" required> 
+			<input type="password" placeholder="Enter Password" name="psw" required> 
 			<button type="submit" id="login-button">Sign Up</button>
 		</form>
 	</div>
