Adding the missing div

--- a/home.html
+++ b/home.html
@@ -218,6 +218,7 @@
                                     </div>
 				      <div id="sofSuite" class="tile orange">
 -                                         <h3 class="title">SOF Suite</h3>
+				      </div>
                                     <div id="regression-tab" data-toggle="buttons">                                        
                                             <label class="btn metrostyle violet btn-group tile btn-primary" style="cursor: pointer">
                                                 <input type="radio" name="suite" value="NWPFE_AUTH NWPFE_LIVE NWPFE_Preview" id="nwpsmoke1" autocomplete="off">
