--- a/home.html
+++ b/home.html
@@ -217,7 +217,7 @@
                                         <h3 class="title">NWP Suite</h3>
                                     </div>
 				      <div id="sofSuite" class="tile orange">
--                                         <h3 class="title">SOF Suite</h3>
+                                        <h3 class="title">SOF Suite</h3>
 				      </div>
                                     <div id="regression-tab" data-toggle="buttons">                                        
                                             <label class="btn metrostyle violet btn-group tile btn-primary" style="cursor: pointer">
