--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		
 		 <form action="/index.html" method="POST">
 			<input type="hidden" name="login" id="login" value="login">
-			<input type="text" placeholder="Enter Username" name="uname" required>
-			<input type="password" placeholder="Enter Password" name="psw" required>
+			<input type="text" placeholder="Enter Username" id="uname" name="uname">
+			<input type="password" placeholder="Enter Password" password="psw" name="psw">
 			<div style="width:10px;margin-left:176px;margin-bottom:10px;"><button type="submit" id="login-button">Login</button></div>
-			<button type="submit" id="login-button"><a href="registration.html" style="color: #53e3a6; text-decoration: none;">Sign Up</a></button>
+			<button type="submit" id="submit-button"><a href="registration.html" style="color: #53e3a6; text-decoration: none;">Sign Up</a></button>
 		</form>
 	</div>
 	
