--- a/registration.html
+++ b/registration.html
@@ -18,9 +18,9 @@
 		
 		 <form action="/index.html" method="POST">
 			<input type="hidden" name="signup" id="signup" value="signup">
-			<input type="text" placeholder="Enter Email" name="email" required> 
-			<input type="password" placeholder="Enter Password" name="psw" required> 
-			<button type="submit" id="login-button">Sign Up</button>
+			<input type="text" placeholder="Enter Email" name="email" id="email" > 
+			<input type="password" placeholder="Enter Password" name="psw" id="psw" > 
+			<button type="submit" id="signup-button">Sign Up</button>
 		</form>
 	</div>
 	
