Custom scenario changes

--- a/customScenario.html
+++ b/customScenario.html
@@ -23,8 +23,8 @@
 
                     <div class="row">
                         <div class="col-sm-4" id="tab-browser-health" style="width:20.33333333%">
-                            <div class="tile purple" style="width: 60%;padding-bottom:38px;">
-                                <h3 class="title"> <span style="color: white; float: left; margin-top:15px; margin-left: 10px ;margin-right:10px">Browser</span></h3>
+                            <div class="tile tilebig" style="width: 60%;padding-bottom:38px;">
+                                <h3 class="title"> <span style="color: white; float: left; color:black;margin-top:15px; margin-left: 10px ;margin-right:10px">Browser</span></h3>
                             </div>
                             <div id="env-tab btn-group" data-toggle="buttons">
 
@@ -58,8 +58,8 @@
                         <div class="step_21" style="border:0px;">
                             <div class="row">
                                 <div class="col-sm-4" id="tab-language-health" style="width:20.33333333%;margin-left:-60px">
-                                    <div class="tile green" style="width: 60%;padding-bottom:38px;">
-                                        <h3 class="title"> <span style="color: white; float: left; margin-top:15px; margin-left: 10px ;margin-right:10px">Language</span></h3>
+                                    <div class="tile tilebig" style="width: 60%;padding-bottom:38px;">
+                                        <h3 class="title"> <span style="color: black; float: left; margin-top:15px; margin-left: 10px ;margin-right:10px">Language</span></h3>
                                     </div>
                                     <div id="env-tab btn-group" data-toggle="buttons">
 
@@ -114,8 +114,8 @@
 
                                 <div class="row">
                                     <div class="col-sm-4" id="tab-channel-health" style="width:20.33333333%;margin-left:-60px">
-                                        <div class="tile yellow" style="width: 60%;padding-bottom:38px;">
-                                            <h3 class="title"> <span style="color: white; float: left; margin-top:15px; margin-left: 10px ;margin-right:10px">Channel</span></h3>
+                                        <div class="tile tilebig" style="width: 60%;padding-bottom:38px;">
+                                            <h3 class="title"> <span style="color: black; float: left; margin-top:15px; margin-left: 10px ;margin-right:10px">Channel</span></h3>
                                         </div>
                                         <div id="env-tab btn-group" data-toggle="buttons">
 
@@ -137,7 +137,7 @@
 
                                     <div class="row">
                                         <div class="col-sm-4" id="tab-customertype-health" style="width:19%;margin-left:-60px">
-                                            <div class="tile blue" style="width: 60%;">
+                                            <div class="tile tilebig" style="width: 60%;color:black;height: 7em;">
                                                 <h3 class="title">Customer Type</h3>
                                             </div>
                                             <div id="env-tab btn-group" data-toggle="buttons">
@@ -167,7 +167,7 @@
 
                                         <div class="row">
                                             <div class="col-sm-4" id="tab-articletype-health" style="width:19.33333333%;margin-left:-60px">
-                                                <div class="tile red" style="width: 60%;">
+                                                <div class="tile tilebig" style="color:black;width: 58%;height: 7em;">
                                                     <h3 class="title">Article Type</h3>
                                                 </div>
                                                 <div id="env-tab btn-group" data-toggle="buttons">
@@ -198,7 +198,7 @@
 
                                             <div class="row">
                                                 <div class="col-sm-4" id="tab-paymenttype-health" style="width:19.33333333%;margin-left:-60px">
-                                                    <div class="tile green" style="width: 60%;">
+                                                    <div class="tile tilebig" style="width: 60%;color:black;height: 7em;">
                                                         <h3 class="title">Payment Type</h3>
                                                     </div>
                                                     <div id="env-tab btn-group" data-toggle="buttons">
