--- a/home.html
+++ b/home.html
@@ -185,6 +185,7 @@
                                             </tr>
                                       </table>
                                 </div>
+                                <a href="" style="margin-top:12em;float:right;">Scheduled deployments / Calendar</a>
                             </div>
                         </div>
                         </div>
@@ -254,7 +255,7 @@
                                                 </input>
                                             </label>
 						
-                                            <label class="btn metrostyle metrostyle tile otherRed btn-group btn-primary" style="cursor: pointer" >
+                                            <label class="btn metrostyle metrostyle tile violet btn-group btn-primary" style="cursor: pointer" >
                                                 <input type="radio" name="environment" value="">     
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:70px">PTE2</span>
                                                 </input>
@@ -265,12 +266,12 @@
 				                    <div class="tilebig">
 		                                <h3 class="title" style="padding-top:0.25em;">2. Regression Suite</h3>
                                     </div>
-                                    <div class="tile otheryellow">
+                                    <div class="tile nwp ">
                                         <h3 class="title">NWP Suite</h3>
                                     </div>
-				      <div id="sofSuite" class="tile orange">
-                                   <h3 class="title">SOF Suite</h3>
-				      </div>
+                                    <div id="sofSuite" class="tile nwp">
+                                                <h3 class="title">SOF Suite</h3>
+                                    </div>
                                     <div id="regression-tab" data-toggle="buttons">                                        
                                             <label class="btn metrostyle violet btn-group tile btn-primary" style="cursor: pointer">
                                                 <input type="radio" name="suite" value="NWPFE_AUTH NWPFE_LIVE NWPFE_Preview" id="nwpsmoke1" autocomplete="off">
@@ -355,8 +356,7 @@
                             <li><button type="button" id="reset" class="btn btn-primary next-step">Reset</button></li>
                             <li><button type="button" id="schedule-later" class="btn btn-primary next-step">Schedule for later</button></li>                        
                             </ul>
-                    </div>
-		    <a href="" style="margin-bottom:2px;">Scheduled deployments / Calendar</a>
+                        </div>
                     </div>
                     </div>
 
