Label change for WCS Regression Flow

--- a/home.html
+++ b/home.html
@@ -313,7 +313,7 @@
                                                                                 
                                             <label class="btn btn-primary metrostyle yoometro tile metrostylelarge" style="cursor: pointer">  
                                                 <input type="radio" name="suite" value="CMS" id="nwpregression4" autocomplete="off">  
-                                                    <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">WCS RegressionTest</span>
+                                                    <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">E2E Order Happy Flow</span>
                                                 </input>
                                             </label>
                                                                        
