--- a/home.html
+++ b/home.html
@@ -312,7 +312,7 @@
                                             </label>
 
                                             <label class="btn btn-primary metrostyle yoometro tile metrostylelarge" style="cursor: pointer">  
-                                                <input type="radio" name="suite" value="CMS" id="somregression4" autocomplete="off">  
+                                                <input type="radio" name="suite" value="CMS" id="sofregression4" autocomplete="off">  
                                                     <span style="color: white; float: left; margin-top: 35px; margin-left: 10px;margin-right:80px">E2E Order Happy Flow</span>
                                                 </input>
                                             </label>                         
