Cancel redirection change

--- a/customScenario.html
+++ b/customScenario.html
@@ -228,7 +228,7 @@
                                             </div>
                                             <div style="margin-left:-150px;margin-right:150px;">
                                                 <ul class="list-inline pull-right margin-top-1">
-                                                    <li><button type="button" id="custom-scenario" class="btn btn-primary next-step"><a href="index.html"> <span style="color:white;float:left;">Cancel</span></a></button></li>
+                                                    <li><button type="button" onclick="document.location.href = 'http://automatedregression.mybluemix.net/home.html'" id="custom-scenario" class="btn btn-primary next-step"><span style="color:white;float:left;">Cancel</span></button></li>
                                                     <li><button type="button" id="custom-scenario" class="btn btn-primary next-step" onclick="createScenario();"><a href="customScenario.html"> <span style="color:white;float:left;">Submit</span></a></button></li>
                                                 </ul>
                                             </div>
